Scoring_Box/build/log/idf_py_stderr_output_24346
Command: make -j 6 all
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp: In function 'void signalHits()':
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp:130:9: error: 'setBuzzerVolume' was not declared in this scope
  130 |         setBuzzerVolume(current_volume);
      |         ^~~~~~~~~~~~~~~
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp: In function 'void resetGameStates()':
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp:142:5: error: 'setBuzzerVolume' was not declared in this scope
  142 |     setBuzzerVolume(0);
      |     ^~~~~~~~~~~~~~~
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp: In function 'void checkVolumeButton()':
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp:344:5: error: 'lastButtonChecktime' was not declared in this scope; did you mean 'lastButtonCheckTime'?
  344 |     lastButtonChecktime = now;
      |     ^~~~~~~~~~~~~~~~~~~
      |     lastButtonCheckTime
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp: In function 'void fencing_setup()':
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp:400:5: error: 'setBuzzerVolume' was not declared in this scope
  400 |     setBuzzerVolume(0);
      |     ^~~~~~~~~~~~~~~
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp: In function 'void fencing_main_task(void*)':
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp:417:19: error: 'duty_cycle' was not declared in this scope
  417 |           case 0: duty_cycle = 0; break;
      |                   ^~~~~~~~~~
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp:422:60: error: 'duty_cycle' was not declared in this scope
  422 |         ledc_set_duty(LEDC_LOW_SPEED_MODE, BUZZER_CHANNEL, duty_cycle);
      |                                                            ^~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7295: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
